# AutoRemove

./: .gitignore  AutoRemove.cpp  AutoRemove.hpp  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.json  elapsed_timer.hpp  main.cpp
src/: AutoRemove.cpp  AutoRemove.hpp
